@@ -1,3 +1,7 @@
+2010-07-02  Ken Werner  <ken.werner@de.ibm.com>
+
+	* gdb.arch/altivec-abi.exp: Fix expect pattern of character vectors.
+
 2010-07-01  Pedro Alves  <pedro@codesourcery.com>
 
 	* gdb.base/help.exp: Adjust expected output.
